@@ -16,11 +16,10 @@
  */
 package org.apache.kafka.server.config;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
- * Represents all the entities that can be configured via ZK
+ * Represents all the entities that can be configured.
  */
 public class ConfigType {
     public static final String TOPIC = "topics";
@@ -31,6 +30,5 @@ public class ConfigType {
     public static final String CLIENT_METRICS = "client-metrics";
     public static final String GROUP = "groups";
 
-    // Do not include ClientMetrics and Groups in `all` as they are not supported on ZK.
-    public static final List<String> ALL = Arrays.asList(TOPIC, CLIENT, USER, BROKER, IP);
+    public static final List<String> ALL = List.of(TOPIC, CLIENT, USER, BROKER, IP, CLIENT_METRICS, GROUP);
 }
